feat: Add timeline view and functionality
Introduces a new "Our Timeline" view to display significant milestones in the relationship.

This commit includes:
- A new `Timeline` component.
- Updates to `types.ts` to define the `Milestone` interface and add 'timeline' to `ViewState`.
- Updates to `storage.ts` to add functions for getting, saving, and deleting milestones.
- Adds the "Our Timeline" navigation item to the `Header` component.
- Includes a new `CalendarIcon` component.
- Enhancements to the `Home` component to display the duration of the relationship.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
             animation: {
               'float': 'float 3s ease-in-out infinite',
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'fade-in': 'fadeIn 0.5s ease-out',
             },
             keyframes: {
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-10px)' },
+              },
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
               }
             }
           }
@@ -73,5 +78,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
